# dcat-dry

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .prospector.yaml  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  Jenkinsfile  LICENSE  README.rst  alembic.ini  app.py  autoapp.py  docker-compose.yml  exclude.txt  package.json  pyproject.toml  requirements.txt  run_batch.py  setup.cfg  setup.py  sonar-project.properties
alembic/: env.py
alembic/versions/: 06850d25958a_initial_state.py  96edbcb9c734_added_common_in_relationship.py
docs/: cli.rst  conf.py  features.rst  index.rst  make.bat  modules.rst  setup.rst  tsa.public.rst  tsa.rst  tsa.tasks.rst
prefixcc/: prefix.py
tests/: conftest.py  test_config.py  test_enrichment.py  test_rdf.py  test_utils.py
tsa/: __init__.py  analyzer.py  app.py  cache.py  celery.py  celeryconfig.py  commands.py  compression.py  db.py  dcat.py  ddr.py  endpoint.py  enricher.py  extensions.py  log.py  mocks.py  model.py  monitor.py  net.py  notification.py  query.py  redis.py  report.py  robots.py  ruian.py  sameas.py  sd.py  settings.py  util.py  viewer.py
tsa/public/: __init__.py  analyze.py  stat.py  test.py  views.py
tsa/tasks/: analyze.py  batch.py  common.py  index.py  process.py  query.py  system.py
tsa/templates/: detail.html  list.html
