[tool.poetry]
name = "dcat-dry"
version = "0.4"
description = "DCAT-AP Dataset relationship indexer."
authors = ["Alexandr Mansurov <alex@eghuro.cz>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dcat_dry"}]

[tool.poetry.dependencies]
python = "^3.7"
alembic = "^1.9.3"
celery = "^5.2.7"
flask = "^2.2.2"
rdflib = "^6.2.0"
sqlalchemy = "^2.0.2"
sparqlwrapper = "^2.0.0"
requests = "^2.28.2"
redis = "^4.5.0"
lxml = "^4.9.2"
marisa-trie = "^0.7.8"
hiredis = "^2.2.1"
gunicorn = "^20.1.0"
atenvironment = "^0.2.1"
flask-caching = "^2.0.2"
flask-cors = "^3.0.10"
flask-sqlalchemy = "^3.0.3"
frozendict = "^2.3.4"
flask-rdf = "^0.2.1"
psycopg2-binary = "^2.9.5"
pyld = "^2.0.3"
requests-cache = "^0.9.8"
requests-toolbelt = "^0.10.1"
rfc3987 = "^1.3.8"

[tool.poetry.group.statsd.dependencies]
statsd = "^4.0.1"

[tool.poetry.group.robots.dependencies]
reppy2 = "^0.3.6"

[tool.poetry.group.sentry.dependencies]
sentry-sdk = "^1.15.0"


[tool.poetry.group.logzio.dependencies]
logzio-python-handler = "^4.0.0"


[tool.poetry.group.decompression.dependencies]
libarchive-c = "^4.0"


[tool.poetry.group.gevent.dependencies]
gevent = "^22.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
