[tool.poetry]
name = "dcat-dry"
version = "0.5"
description = "DCAT-AP Dataset relationship indexer."
packages = [{include = "tsa"}]
authors = ["Alexandr Mansurov <alex@eghuro.cz>"]
repository = "https://github.com/eghuro/dcat-dry"
license = "MIT"
readme = "README.rst"
classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: Implementation :: CPython",
        "Development Status :: 3 - Alpha",
        "Framework :: Flask",
        "Framework :: Celery",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering :: Information Analysis",
        "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
        "Natural Language :: English",
    ]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.9.3"
celery = "^5.2.7"
flask = "^2.2.2"
rdflib = "^6.2.0"
sqlalchemy = "^2.0.2"
sparqlwrapper = "^2.0.0"
requests = "^2.28.2"
redis = "^4.5.0"
lxml = "^4.9.2"
marisa-trie = "^0.7.8"
hiredis = "^2.2.1"
gunicorn = "^20.1.0"
atenvironment = "^0.2.1"
flask-caching = "^2.0.2"
flask-cors = "^3.0.10"
flask-sqlalchemy = "^3.0.3"
frozendict = "^2.3.4"
flask-rdf = "^0.2.1"
psycopg2-binary = "^2.9.5"
requests-cache = "^0.9.8"
requests-toolbelt = "^0.10.1"
rfc3987 = "^1.3.8"
pycouchdb = { git = "https://github.com/eghuro/py-couchdb.git" }
cachetools = "^5.3.0"
pyld = { git = "https://github.com/eghuro/pyld.git" }

[tool.poetry.group.statsd]
optional = true

[tool.poetry.group.statsd.dependencies]
statsd = "^4.0.1"

[tool.poetry.group.robots]
optional = true

[tool.poetry.group.robots.dependencies]
reppy2 = "^0.3.6"

[tool.poetry.group.sentry]
optional = true

[tool.poetry.group.sentry.dependencies]
sentry-sdk = "^1.15.0"

[tool.poetry.group.logzio]
optional = true

[tool.poetry.group.logzio.dependencies]
logzio-python-handler = "^4.0.0"

[tool.poetry.group.decompression]
optional = true

[tool.poetry.group.decompression.dependencies]
libarchive-c = "^4.0"

[tool.poetry.group.gevent]
optional = true

[tool.poetry.group.gevent.dependencies]
gevent = "^22.10.2"
psycogreen = "^1.0.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
ochrona = "^2.0.2"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
webtest = "^3.0.0"
prospector = {extras = ["with-everything"], version = "^1.8.4"}
types-requests = "^2.28.11.12"
types-redis = "^4.4.0.6"
radon = "^5.1.0"
flake8 = "5.0.4"


[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
sphinx = "^6.1.3"
pre-commit = "^3.0.4"
sphinx-click = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
